--- a/index.html
+++ b/index.html
@@ -1,8 +1,57 @@
 <!DOCTYPE html>
 <html>
-    <head><title>This is Web</title></head>
+<head>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1 class="page-title">Facility</h1>
 
-    <body>
-        <div></div>
-    </body>
+    <div class="container">
+        <div class="card">
+            <div class="banner">
+                <img src="./image/computer.jpg" alt="Computer">
+            </div>
+            <div class="card-content">
+                <h3 class="title">Computers</h3>
+                <ul>
+                    <li>Core i7 12700</li>
+                    <li>32GB RAM</li>
+                    <li>2TB HDD</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="banner">
+                <img src="./image/TV.jpg" alt="TV">
+            </div>
+            <div class="card-content">
+                <h3 class="title">LED TV</h3>
+                <p>
+                    This is description
+                </p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="banner">
+                <img src="./image/projector.jpg" alt="Projector">
+            </div>
+            <div class="card-content">
+                <h3 class="title">Projector</h3>
+                <p>
+                    This is description
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <h1 class="page-title">Activities</h1>
+    <div class="activity">
+        <p>
+            This is description
+        </p>
+    </div>
+
+</body>
 </html>
