--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
         <nav id="navbar" class="navbar">
         <div class="nav-container">
             <ul class="nav-menu" id="nav-menu">
-            <li><a href="#home" class="nav-link active">Home</a></li>
-            <li><a href="#profile" class="nav-link">Profile</a></li>
-            <li><a href="#hometown" class="nav-link">Hometown</a></li>
-            <li><a href="#food" class="nav-link">Food</a></li>
-            <li><a href="#tourist" class="nav-link">Tourist</a></li>
+            <li><a href="#tourist" class="nav-link active">Home</a></li>
+            <li><a href="#deskripsi" class="nav-link">Deskripsi</a></li>
+            <li><a href="#facility" class="nav-link">Fasilitas</a></li>
+            <li><a href="#activity" class="nav-link">Kegiatan</a></li>
             </ul>
             <button class="mobile-menu-toggle" id="mobile-menu-toggle">
             <span class="hamburger-line"></span>
@@ -39,7 +38,9 @@
         <h1>Lab <span>Pemrograman 1</span></h1>
         <h2>Departemen Teknik Informatika ITS</h2>
 
+        
         <div class="cards">
+                
             <div class="card card1">
             <img src="photo/1.jpg" alt="" />
             </div>
@@ -67,8 +68,9 @@
         </div>
         </section>
 
-        <div id="overlay-dark"></div>
+        <div id="deskripsi" id="overlay-dark"></div>
         <div class="kotak-kotak">
+            <h3>Description</h3>
         <div class="kotak">
             <div class="kotak-content">
             <div>
@@ -108,6 +110,7 @@
                 </div>
                 <div class="card-content">
                     <h3 class="titleNew">Computers</h3>
+                    <p>Puluhan komputer dengan spek : </p>
                     <ul class="lists">
                         <li>Core i7 12700</li>
                         <li>32GB RAM</li>
@@ -118,35 +121,58 @@
 
             <div class="cardNew">
                 <div class="bannerNew">
-                    <img src="./photo/TV.jpg" alt="TV">
+                    <img src="./photo/projector.jpg" alt="Projector">
                 </div>
                 <div class="card-content">
-                    <h3 class="titleNew">LED TV</h3>
+                    <h3 class="titleNew">Projector</h3>
                     <p>
-                        This is description
+                        Mendukung kegiatan kuliah dan seminar dengan menampilkan slide, video, serta media pembelajaran lainnya di layar besar.
                     </p>
                 </div>
             </div>
 
             <div class="cardNew">
                 <div class="bannerNew">
-                    <img src="./photo/projector.jpg" alt="Projector">
+                    <img src="./photo/TV.jpg" alt="TV">
                 </div>
                 <div class="card-content">
-                    <h3 class="titleNew">Projector</h3>
+                    <h3 class="titleNew">LED TV</h3>
                     <p>
-                        This is description
+                        Tambahan layar LED di tengah ruangan memastikan peserta di bagian belakang tetap melihat dengan jelas.
                     </p>
                 </div>
             </div>
+
         </div>
 
-        <h1 class="page-title">Activities</h1>
+        <h1  id="activity" class="page-title">Activities</h1>
         <div class="activity">
             <p>
-                This is description
+                Beberapa aktivitas yang dilakukan di Lab Pemrograman 1 ini adalah perkuliahan untuk beberapa mata kuliah seperti Konsep Pengembangan Perangkat Lunak (KPPL), Pemrograman Web (PWeb) dan perkuliahan lainnya. Lab Pemrograman 1 ini juga dapat digunakan oleh mahasiswa dan dosen untuk mengerjakan tugas maupun kegiatan akademik lainnya.
             </p>
         </div>
+
+    <footer class="footer">
+        <div class="particles">
+            <div class="particle" style="left: 10%; width: 4px; height: 4px; animation-delay: 0s;"></div>
+            <div class="particle" style="left: 30%; width: 6px; height: 6px; animation-delay: 2s;"></div>
+            <div class="particle" style="left: 50%; width: 3px; height: 3px; animation-delay: 4s;"></div>
+            <div class="particle" style="left: 70%; width: 5px; height: 5px; animation-delay: 6s;"></div>
+            <div class="particle" style="left: 90%; width: 4px; height: 4px; animation-delay: 8s;"></div>
+        </div>
+
+        <div class="footer-bottom">
+            <div class="footer-bottom-content">
+                <div class="copyright">
+                    © 2025 Lab Pemrograman 1. Departemen Teknik Informatika ITS.
+                </div>
+                <div class="footer-bottom-links">
+                    <a href="http://reservasi.if.its.ac.id/" target="_blank">Kontak</a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     </div>
     <script src="script.js"></script>
     </body>
