--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <img src="photo/computer.jpg" alt="Computer">
                 </div>
                 <div class="card-content">
-                    <h3 class="titleNew">Computers</h3>
+                    <h3 class="titleNew">Komputer</h3>
                     <p>Puluhan komputer dengan spek : </p>
                     <ul class="lists">
                         <li>Core i7 12700</li>
@@ -124,7 +124,7 @@
                     <img src="./photo/projector.jpg" alt="Projector">
                 </div>
                 <div class="card-content">
-                    <h3 class="titleNew">Projector</h3>
+                    <h3 class="titleNew">Proyektor</h3>
                     <p>
                         Mendukung kegiatan kuliah dan seminar dengan menampilkan slide, video, serta media pembelajaran lainnya di layar besar.
                     </p>
