--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
             <img src="photo/6.jpg" alt="" />
             </div>
             <div class="card card7">
-            <img src="photo/7.png" alt="" />
+            <img src="photo/7.JPG" alt="" />
             </div>
             <div class="card card8">
-            <img src="photo/8.jpg" alt="" />
+            <img src="photo/8.JPG" alt="" />
             </div>
         </div>
         </section>
